Fix bug where tinymce div was unintentionally covering the page

--- a/app/assets/stylesheets/shared/application.css
+++ b/app/assets/stylesheets/shared/application.css
@@ -19,7 +19,7 @@ body, html {
   height: 100%;
 }
 
-body > div {
+body > div.container {
   height: 100%;
 }
 
